# PipelineFinhubStreamingData

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  architecture-projet.md  main.py  projet.md  pyproject.toml
airflow/: README.md  docker-compose.yml  requirements.txt
airflow/dags/: stock_pipeline_dag.py
consumers/: README.md  consumer_candles.py  consumer_quotes.py  consumer_trades.py  utils.py
dashboard/: README.md  app.py
infra/: Dockerfile  README.md  docker-compose.yml
ingestion/: README.md  config.py  finnhub_client.py  producer.py  run_ingestion.py
ingestion/schemas/: candles.json  quotes.json  trades.json
kafka/: README.md  create_topics.sh  docker-compose.yml
rapport/: prompts-illustrations.md  rapport.tex
tasks/: lessons.md  todo.md
transformations/gold/: README.md  agg_metrics.py  features.py  utils.py
transformations/silver/: README.md  clean_candles.py  clean_quotes.py  clean_trades.py  utils.py
warehouse/dbt/: README.md  dbt_project.yml  profiles.yml
warehouse/dbt/models/marts/: agg_stock_metrics.sql  dim_symbol.sql  fact_trades.sql
warehouse/dbt/models/staging/: _sources.yml  stg_trades.sql
warehouse/dbt/tests/: schema.yml
